--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ tokio = { version = "1.45.0", features = [
     "rt-multi-thread",
     "sync",
     "signal",
+    "time",
 ] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.140"
