--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,10 @@ thiserror = "2.0.12"
 uuid = { version = "1.17.0", features = ["v4"] }
 paste = "1.0.15"
 futures = "0.3.31"
-redis = { version = "0.31.0", optional = true }
+redis = { version = "0.31.0", optional = true, features = [
+    "tokio-comp",
+    "connection-manager",
+] }
 sqlx = { version = "0.8.6", features = [
     "postgres",
     "runtime-tokio-rustls",
